[package]
name = "rust-jxl"
version = "0.1.0"
edition = "2024"

[profile.release]     
codegen-units = 1
strip = true           
lto = true

[dependencies]
jpegxl-rs = { version = "0.11.2", default-features = false, features = ["image", "vendored"] }
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp", "rayon"] }
glob = "0.3.2"
oxipng = "9.1.0"
